--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>spring5-recipe-app</name>
-	<description>Recipe Application</description>
+	<name>Recipe Application</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
